@@ -1,20 +1,25 @@
 /*
  * event.c
  *
- * by Gary Wong, 1996
+ * by Gary Wong, 1996-2000
  *
+ * $Id: event.c,v 1.2 2000/01/10 18:47:54 gtw Exp $
  */
 
 #include "config.h"
 
 #include <assert.h>
 #include <errno.h>
+#if HAVE_LIMITS_H
 #include <limits.h>
+#endif
 #include <list.h>
+#include <stdio.h>
 #include <stdlib.h>
-#include <syslog.h>
 #include <sys/types.h>
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 
 #if EVENT_DEBUG
 #include <stdio.h>
@@ -302,7 +307,7 @@ extern int HandleEvents( void ) {
 	    if( errno == EINTR )
 		continue;
 
-	    syslog( LOG_ERR, "select: %m" );
+	    perror( "select" );
 
 	    return -1;
 	}
